<resources>
    <string name="app_name">AuroraEvents</string>
    <string name="login_confirm_text">Confirm</string>
    <string name="default_phone_number">(000) 000–0000</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="optional_label">Optional</string>
    <string name="user_name_label">Name</string>
    <string name="default_user_name">Your Name</string>
    <string name="mandatory_label">Mandatory</string>
    <string name="default_email">your@email.ca</string>
    <string name="email_label">email</string>
    <string name="header_content_desc">Header</string>
    <string name="login_header">Login</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="back_button_content_description">Back Button</string>
    <string name="switch_to_admin_mode_text">Toggle Admin Mode</string>
    <string name="delete_profile_text">Delete Profile</string>
    <string name="your_profile_picture_content_description">Your profile picture</string>
    <string name="delete_profile_picture_content_description">Delete profile picture</string>
    <string name="mandatory_fields_toast_text">Please fill in the mandatory fields</string>
    <string name="database_error_toast_text">Sorry, we couldn\'t reach the database. Please try again later.</string>
    <string name="user_info_successfully_updated_toast_text">User info successfully updated!</string>
    <string name="event_poster_content_description">Event poster</string>
    <string name="description_title_text">Description</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit eros in quam aliquam, eget sollicitudin enim faucibus. Sed pellentesque luctus nulla eget aliquet. Aenean volutpat ut nisl blandit aliquet. Integer porta tincidunt tincidunt. Ut eleifend, neque a vestibulum finibus, tortor elit pharetra felis, ac pulvinar quam lectus et justo. Ut imperdiet tortor ut pharetra gravida. Vivamus at rutrum leo. Morbi metus nisl, egestas non mi sed, eleifend euismod nulla.</string>
    <string name="selection_info_button_content_description">Info button about the selection process</string>
    <string name="join_button_text">Join Pool</string>
    <string name="leave_pool_button_text">Leave Pool</string>
    <string name="accept_button_text">Accept</string>
    <string name="decline_button_text">Decline</string>
    <string name="attending_label_text">You are attending!</string>
    <string name="cannot_attend_label_text">Sorry, you cannot attend.</string>
    <string name="delete_event_button_text">Delete Event</string>
    <string name="report_event_button_text">Report Event</string>
    <string name="lottery_info_description">When you sign up, your name gets put into a pool, then the organizer can randomly select people to invite.\n\nIf you get invited, you can choose to accept or decline. If you don\'t accept by the deadline, you are automatically declined.</string>
    <string name="lottery_info_title">How the lottery works</string>
    <string name="default_event_name">Default Event Name (you shouldn\'t see this)</string>
    <string name="default_event_date_time">Every Thursday and Friday @ 2:30 p.m. – 5:00 p.m. from 2026-03-05 – 2026-04-24 (you shouldn\'t see this)</string>
    <string name="default_event_organizer">put on by Aurora LLC (you shouldn\'t see this)</string>
    <string name="default_event_price">$999 (you shouldn\'t see this)</string>
    <string name="default_event_location">in Edmonton, Alberta, Canada (you shouldn\'t see this)</string>
    <string name="default_event_deadline">Sign up before 2:30 p.m. on 2026-02-26 (you shouldn\'t see this)</string>
    <string name="default_waiting_list_count">67/420 people are waiting (you shouldn\'t see this)</string>
    <string name="default_attendees_count">10/32 people are participating (you shouldn\'t see this)</string>
    <string name="delete_button_text">Delete</string>
    <string name="permanent_warning_description">This action is permanent. Do you wish to proceed?</string>
    <string name="permanent_warning_title">WARNING</string>
    <string name="report_dialog_title">Do you want to report this event?</string>
    <string name="report_dialog_warning">Only report this event if it violates at least one of the rules:</string>
    <string name="report_dialog_list">• No violence\n• No references to the 2008 film The Dark Night</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="report_button_text">Report</string>
    <string name="organized_by_text">"organized by "</string>
    <string name="default_reported_num">Reported by 21 users\n(you shouldn\'t seee this)</string>
    <string name="okay_button_text">Okay</string>
    <string name="comments_button_text">Comments</string>
    <string name="manage_co_organizers_title">Co-Organizers</string>
    <string name="manage_co_organizers_subtitle">Co-organizers have full organizer access to this event. They are removed from the entrant pool while assigned.</string>
    <string name="add_co_organizer_button_text">Add Co-Organizer</string>
    <string name="current_co_organizers_label">Current Co-Organizers</string>
    <string name="no_co_organizers_text">No co-organizers yet.\nTap \'Add Co-Organizer\' to assign one.</string>
    <string name="remove_co_organizer_button_text">Remove</string>
    <string name="co_organizer_cannot_join">You are a co-organizer for this event and cannot join the entrant pool.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required_field_warning_text">Fields marked with * are required</string>
    <string name="iv_event_image_content_description">The event\'s poster image</string>
    <string name="add_an_image_button_text">Add an image</string>
    <string name="confirm_text">Confirm</string>
    <string name="geolocation_unlock_text">Unlock</string>
    <string name="geolocation_lock_text">Geolocation Lock</string>
    <string name="make_private_text">Make Private</string>
    <string name="make_public_text">Make Public</string>
    <string name="required_event_name_hint">*Event Name</string>
    <string name="required_description_hint">*Description</string>
    <string name="required_price_hint">*Price</string>
    <string name="required_maximum_participants_hint">*Maximum Participants</string>
    <string name="maximum_waiting_list_spots_hint">Maximum Waiting List Spots</string>
    <string name="required_location_hint">*Location</string>
    <string name="required_sign_up_start_hint">*Sign-Up Start</string>
    <string name="required_sign_up_end_hint">*Sign-Up End</string>
    <string name="required_event_date_hint">*Event Date</string>
    <string name="barscanner_icon_content_description">A barcode icon</string>
    <string name="scan_qr_code_button_text">Scan QR Code</string>
    <string name="events_title">Events</string>
    <string name="entrants_title">Entrants</string>
    <string name="notifications_title">Notifications</string>
    <string name="to_text">To:</string>
    <string name="participating_text">Participating</string>
    <string name="rejected_text">Rejected</string>
    <string name="invited_text">Invited</string>
    <string name="waiting_text">Waiting</string>
    <string name="cancelled_text">Cancelled</string>
    <string name="message_title">Message</string>
    <string name="enter_your_message_hint">Enter your message</string>
    <string name="send_button_text">Send</string>
    <string name="confirm_location_button_text">Confirm Location</string>
    <string name="filter_button_text">Filter</string>
    <string name="sort_button_text">Sort</string>
    <string name="view_map_button_text">View Map</string>
    <string name="done_button_text">Done</string>
    <string name="opt_in_button_text">Opt In</string>
    <string name="opt_out_button_text">Opt Out</string>
    <string name="add_an_event_content_description">Add an event</string>
    <string name="no_event_found_text">No such events exist</string>
    <string name="get_more_participants_button_text">Get More Participants</string>
    <string name="show_qr_code_button_text">Show QR Code</string>
    <string name="view_entrants_button_text">View Entrants</string>
    <string name="send_notification_button_text">Send Notification</string>
    <string name="manage_co_organizers_button_text">Manage Co-Organizers</string>
    <string name="edit_event_poster_title">Edit Event Poster</string>
    <string name="invite_entrants_button_text">Invite Entrants</string>
    <string name="qr_code_picture_content_description">QR Code of the event ID</string>
</resources>