<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_header"
        android:textSize="40sp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/light_text"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header"
        android:elevation="1dp"/>

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="0dp"
        android:contentDescription="@string/header_content_desc"
        android:src="@drawable/background_aroura_gradient"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_label"
                android:textColor="@color/purple"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:backgroundTint="@color/blue"
                android:inputType="textPersonName"
                android:hint="@string/default_user_name"
                android:textColorHint="@color/light_glass"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mandatory_label"
                android:textColor="@color/light_glass"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="@color/purple"/>

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:backgroundTint="@color/blue"
                android:inputType="textEmailAddress"
                android:hint="@string/default_email"
                android:textColorHint="@color/light_glass"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mandatory_label"
                android:textColor="@color/light_glass"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_label"
                android:textColor="@color/purple"/>

            <EditText
                android:id="@+id/user_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:backgroundTint="@color/blue"
                android:hint="@string/default_phone_number"
                android:inputType="phone"
                android:textColor="@color/green"
                android:textColorHint="@color/light_glass"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/optional_label"
                android:textColor="@color/light_glass"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/roboto"
            android:paddingVertical="15dp"
            android:text="@string/login_confirm"
            android:textColor="@color/dark_text"
            android:textSize="8pt"
            android:paddingHorizontal="145dp"
            app:icon="@drawable/round_check_24"
            app:iconTint="@color/dark_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>